[package]
name = "tetris"
version = "0.1.0"
authors = ["schakkall"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "./src/utils",
    "./src/view"
]


[dependencies]
utils = { path = "./src/utils" }
view = { path = "./src/view" }
